--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -40,17 +40,17 @@
     <div class="games">
         <div class="game-card">
             <span class="tag">戦略</span>
-            <img src="https://images.unsplash.com/photo-1610173827008-a806da59f541" alt="">
+            <img src="../../img/home_bodoge_katan.jpg" alt="">
             <div class="info"><strong>カタン</strong><br>島を開拓し、資源を交換し勝利を目指す戦略ゲーム。</div>
         </div>
         <div class="game-card">
             <span class="tag">ラッキ要素</span>
-            <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420" alt="">
+            <img src="../../img/home_bodoge_dominion.jpg" alt="">
             <div class="info"><strong>ドミニオン</strong><br>カードを集め、デッキ構築で戦う名作。</div>
         </div>
         <div class="game-card">
             <span class="tag">SF/冒険</span>
-            <img src="https://images.unsplash.com/photo-1593697826894-3aee1bb13e08" alt="">
+            <img src="../../img/home_bodege_terahxo-ming.jpg" alt="">
             <div class="info"><strong>テラフォーミング・マーズ</strong><br>火星を開拓する壮大な戦略ゲーム。</div>
         </div>
     </div>
