--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -5,13 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>負けても泣かない大人の社交場</title>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../../css/pages/home/style.css">
 </head>
 
 <body>
 
 <header>
-    <div class="logo">負けても泣かない大人の社交場</div>
+    <div class="logo">
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon">
+        負けても泣かない大人の社交場
+    </div>
     <nav>
         <a href="#">メニュー＆ゲーム</a>
         <a href="#">アクセス＆お問い合わせ</a>
