--- a/pages/rentals/index (2).html
+++ b/pages/rentals/index (2).html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ボードゲーム貸し出し | ボードゲームカフェ</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../../css/pages/rentals/style (2).css" />
 </head>
 <body>
   <header class="header">
