ヘッダー・フッダー変更

--- a/pages/rentals/index (2).html
+++ b/pages/rentals/index (2).html
@@ -4,22 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ボードゲーム貸し出し | ボードゲームカフェ</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../css/pages/rentals/style (2).css" />
 </head>
 <body>
-  <header class="header">
-    <div class="nav-left">
-      <a href="#" class="logo">🎲 BoardGame Cafe</a>
-      <nav class="nav-links">
-        <a href="#">ホーム</a>
-        <a href="#">ゲーム一覧</a>
-        <a href="#">アクセス</a>
-      </nav>
+  <header>
+    <div class="logo">
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon">
+        負けても泣かない大人の社交場
     </div>
-    <div class="nav-right">
-      <button class="primary-btn">来店予約</button>
-    </div>
-  </header>
+    <nav>
+        <a href="#">メニュー＆ゲーム</a>
+        <a href="#">アクセス＆お問い合わせ</a>
+    </nav>
+    <a class="reserve-btn" href="#">予約する</a>
+</header>
 
   <main class="container">
     <h1 class="page-title">ボードゲーム貸し出しフォーム</h1>
@@ -102,16 +101,33 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="footer-inner">
-      <div class="footer-left">
-        <p>〒123-4567 Boardville | Email: info@boardgame.example</p>
-      </div>
-      <div class="footer-right">
-        <p>© 2025 BoardGame Cafe</p>
-      </div>
+ <footer>
+    <div class="columns">
+        <div>
+            <p><strong>Discover a world of strategy and fun.</strong></p>
+        </div>
+        <div>
+            <strong>Explore</strong>
+            <a href="#">ホーム</a>
+            <a href="#">メニュー＆ゲーム</a>
+            <a href="#">予約</a>
+        </div>
+        <div>
+            <strong>Resources</strong>
+            <a href="#">アクセス＆お問い合わせ</a>
+            <a href="#">プライバシーポリシー</a>
+            <a href="#">利用規約</a>
+        </div>
+        <div>
+            <strong>Contact Us</strong>
+            <p>123 Game Lane, Boardville, BG 54321</p>
+            <p>Email: info@boardgamecafe.com</p>
+        </div>
     </div>
-  </footer>
+    <div class="copyright">
+        © 2025 Board Game Cafe Official Site. All rights reserved.
+    </div>
+</footer>
 </body>
 </html>
 
