--- a/pages/reviews/index.html
+++ b/pages/reviews/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>レビューを書く</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
     <script>
         function setRating(r) {
             document.getElementById("rating").value = r;
@@ -60,3 +60,4 @@
 
 </body>
 </html>
+
