--- a/pages/reviews/index.html
+++ b/pages/reviews/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>レビューを書く</title>
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/pages/reviews/style.css">
     <script>
         function setRating(r) {
             document.getElementById("rating").value = r;
