deploy: デプロイするにあたってパス変更したり

--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ボードゲームカタログ</title>
-    <link rel="stylesheet" href="../../css/pages/game/style.css">
+    <link rel="stylesheet" href="/css/pages/game/style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo"></div>
-            <a href="#home">Home</a>
-            <a href="#menu">Menu & Games</a>
-            <a href="#access">Access & Contact</a>
-            <a href="#reserve" class="reserve-btn">📅 テーブルを予約</a>
+            <a href="/">Home</a>
+            <a href="/pages/game/index.html">Menu & Games</a>
+            <a href="/pages/reviews/index.html">Reviews</a>
+            <a href="/pages/rentals/index.html" class="reserve-btn">📅 テーブルを予約</a>
         </nav>
     </header>
 
