--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
         <img src="/img/title_logo.webp" alt="" class="logo-icon" />
         負けても泣かない大人の社交場
       </div>
-      <nav>
-        <a href="/pages/game/index.html">メニュー＆ゲーム</a>
-        <a href="/pages/reviews/index.html">レビュー</a>
-      </nav>
-      <a class="reserve-btn" href="/pages/rentals/index.html">予約する</a>
+       <nav>
+         <a href="/pages/game/index.html">メニュー＆ゲーム</a>
+         <a href="/pages/reviews/index.html">レビュー</a>
+       </nav>
+       <a class="reserve-btn" href="/pages/rentals/index.html">予約する</a>
     </header>
 
     <div class="hero">
       <h1>負けても泣かない大人の社交場</h1>
       <p>大人たちのための特別な遊び場。ゲームの興奮とくつろぎを。</p>
-      <button onclick="location.href='/pages/rentals/index.html'">
-        今すぐ予約
-      </button>
+       <button onclick="location.href='/pages/rentals/index.html'">今すぐ予約</button>
     </div>
 
     <section>
@@ -79,9 +77,7 @@
     <div class="reserve-banner">
       <h2>忘れられない夜を、今すぐ予約</h2>
       <p>最高のボードゲーム体験を、美味しいお食事とともに。</p>
-      <button onclick="location.href='/pages/rentals/index.html'">
-        席を予約する
-      </button>
+       <button onclick="location.href='/pages/rentals/index.html'">席を予約する</button>
     </div>
 
     <section>
@@ -123,18 +119,18 @@
         <div>
           <p><strong>Discover a world of strategy and fun.</strong></p>
         </div>
-        <div>
-          <strong>Explore</strong>
-          <a href="/">ホーム</a>
-          <a href="/pages/game/index.html">メニュー＆ゲーム</a>
-          <a href="/pages/rentals/index.html">予約</a>
-        </div>
-        <div>
-          <strong>Resources</strong>
-          <a href="/pages/reviews/index.html">レビュー</a>
-          <a href="#">プライバシーポリシー</a>
-          <a href="#">利用規約</a>
-        </div>
+         <div>
+           <strong>Explore</strong>
+           <a href="/">ホーム</a>
+           <a href="/pages/game/index.html">メニュー＆ゲーム</a>
+           <a href="/pages/rentals/index.html">予約</a>
+         </div>
+         <div>
+           <strong>Resources</strong>
+           <a href="/pages/reviews/index.html">レビュー</a>
+           <a href="#">プライバシーポリシー</a>
+           <a href="#">利用規約</a>
+         </div>
         <div>
           <strong>Contact Us</strong>
           <p>123 Game Lane, Boardville, BG 54321</p>
