--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -1,134 +1,156 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ボードゲーム貸し出し | ボードゲームカフェ</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/pages/rentals/style (2).css" />
-</head>
-<body>
-  <header>
-    <div class="logo">
-        <img src="/img/title_logo.webp" alt="" class="logo-icon">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ボードゲーム貸し出し | ボードゲームカフェ</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/pages/rentals/style (2).css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="/img/title_logo.webp" alt="" class="logo-icon" />
         負けても泣かない大人の社交場
-    </div>
-    <nav>
+      </div>
+      <nav>
         <a href="/">ホーム</a>
         <a href="/pages/game/index.html">メニュー＆ゲーム</a>
         <a href="/pages/reviews/index.html">レビュー</a>
-    </nav>
-    <a class="reserve-btn" href="/pages/rentals/index.html">予約する</a>
-</header>
+      </nav>
+      <a class="reserve-btn" href="/pages/rentals/index.html">予約する</a>
+    </header>
 
-  <main class="container">
-    <h1 class="page-title">ボードゲーム貸し出しフォーム</h1>
-    <p class="subtitle">貸し出し可能なボードゲームを選んで、必要情報を入力してください。</p>
+    <main class="container">
+      <h1 class="page-title">ボードゲーム貸し出しフォーム</h1>
+      <p class="subtitle">
+        貸し出し可能なボードゲームを選んで、必要情報を入力してください。
+      </p>
 
-    <section class="form-card">
-      <h2 class="form-title">貸し出し申し込み</h2>
+      <section class="form-card">
+        <h2 class="form-title">貸し出し申し込み</h2>
 
-      <form class="rental-form" autocomplete="off" action="#" method="post">
-        <label class="form-row">
-          <span class="label-title">お名前</span>
-          <input type="text" name="name" placeholder="例：山田 太郎" required />
-        </label>
-
-        <label class="form-row">
-          <span class="label-title">メールアドレス</span>
-          <input type="email" name="email" placeholder="example@mail.com" required />
-        </label>
-
-        <label class="form-row">
-          <span class="label-title">電話番号</span>
-          <input type="tel" name="phone" placeholder="080-1234-5678" />
-        </label>
-
-        <label class="form-row">
-          <span class="label-title">貸し出すゲーム</span>
-          <select name="game" required>
-            <option value="">— ゲームを選択 —</option>
-            <option>カタン</option>
-            <option>ドミニオン</option>
-            <option>パンデミック</option>
-            <option>テラフォーミング・マーズ</option>
-            <option>カルカソンヌ</option>
-            <option>その他（備考に記載）</option>
-          </select>
-        </label>
-
-        <div class="grid-2">
+        <form class="rental-form" autocomplete="off" action="#" method="post">
           <label class="form-row">
-            <span class="label-title">貸出日</span>
-            <input type="date" name="start_date" required />
+            <span class="label-title">お名前</span>
+            <input
+              type="text"
+              name="name"
+              placeholder="例：山田 太郎"
+              required
+            />
           </label>
 
           <label class="form-row">
-            <span class="label-title">返却予定日</span>
-            <input type="date" name="end_date" required />
+            <span class="label-title">メールアドレス</span>
+            <input
+              type="email"
+              name="email"
+              placeholder="example@mail.com"
+              required
+            />
           </label>
-        </div>
 
-        <label class="form-row">
-          <span class="label-title">人数（プレイ予定）</span>
-          <select name="players">
-            <option>1名</option>
-            <option>2名</option>
-            <option>3名</option>
-            <option selected>4名</option>
-            <option>5名以上</option>
-          </select>
-        </label>
+          <label class="form-row">
+            <span class="label-title">電話番号</span>
+            <input type="tel" name="phone" placeholder="080-1234-5678" />
+          </label>
 
-        <label class="form-row">
-          <span class="label-title">備考（アレルギーや受け取り時間など）</span>
-          <textarea name="notes" rows="4" placeholder="受け取り希望時間・特記事項など"></textarea>
-        </label>
+          <label class="form-row">
+            <span class="label-title">貸し出すゲーム</span>
+            <select name="game" required>
+              <option value="">— ゲームを選択 —</option>
+              <option>カタン</option>
+              <option>ドミニオン</option>
+              <option>パンデミック</option>
+              <option>テラフォーミング・マーズ</option>
+              <option>カルカソンヌ</option>
+              <option>その他（備考に記載）</option>
+            </select>
+          </label>
 
-        <div class="form-actions">
-          <button type="reset" class="btn">リセット</button>
-          <button type="submit" class="primary-btn">申し込みを送信</button>
-        </div>
-      </form>
-    </section>
+          <div class="grid-2">
+            <label class="form-row">
+              <span class="label-title">貸出日</span>
+              <input type="date" name="start_date" required />
+            </label>
 
-    <section class="info-card">
-      <h3>貸し出しルール</h3>
-      <ul>
-        <li>貸出は店頭での受け取りのみです（郵送不可）。</li>
-        <li>返却は店頭にて指定日までにお願いします。延滞料が発生する場合があります。</li>
-        <li>破損・紛失は弁償の対象となります。丁寧に扱ってください。</li>
-      </ul>
-    </section>
-  </main>
+            <label class="form-row">
+              <span class="label-title">返却予定日</span>
+              <input type="date" name="end_date" required />
+            </label>
+          </div>
 
- <footer>
-    <div class="columns">
+          <label class="form-row">
+            <span class="label-title">人数（プレイ予定）</span>
+            <select name="players">
+              <option>1名</option>
+              <option>2名</option>
+              <option>3名</option>
+              <option selected>4名</option>
+              <option>5名以上</option>
+            </select>
+          </label>
+
+          <label class="form-row">
+            <span class="label-title"
+              >備考（アレルギーや受け取り時間など）</span
+            >
+            <textarea
+              name="notes"
+              rows="4"
+              placeholder="受け取り希望時間・特記事項など"
+            ></textarea>
+          </label>
+
+          <div class="form-actions">
+            <button type="reset" class="btn">リセット</button>
+            <button type="submit" class="primary-btn">申し込みを送信</button>
+          </div>
+        </form>
+      </section>
+
+      <section class="info-card">
+        <h3>貸し出しルール</h3>
+        <ul>
+          <li>貸出は店頭での受け取りのみです（郵送不可）。</li>
+          <li>
+            返却は店頭にて指定日までにお願いします。延滞料が発生する場合があります。
+          </li>
+          <li>破損・紛失は弁償の対象となります。丁寧に扱ってください。</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <div class="columns">
         <div>
-            <p><strong>Discover a world of strategy and fun.</strong></p>
+          <p><strong>Discover a world of strategy and fun.</strong></p>
         </div>
         <div>
-            <strong>Explore</strong>
-            <a href="#">ホーム</a>
-            <a href="#">メニュー＆ゲーム</a>
-            <a href="#">予約</a>
+          <strong>Explore</strong>
+          <a href="#">ホーム</a>
+          <a href="#">メニュー＆ゲーム</a>
+          <a href="#">予約</a>
         </div>
         <div>
-            <strong>Resources</strong>
-            <a href="#">アクセス＆お問い合わせ</a>
-            <a href="#">プライバシーポリシー</a>
-            <a href="#">利用規約</a>
+          <strong>Resources</strong>
+          <a href="#">アクセス＆お問い合わせ</a>
+          <a href="#">プライバシーポリシー</a>
+          <a href="#">利用規約</a>
         </div>
         <div>
-            <strong>Contact Us</strong>
-            <p>123 Game Lane, Boardville, BG 54321</p>
-            <p>Email: info@boardgamecafe.com</p>
+          <strong>Contact Us</strong>
+          <p>123 Game Lane, Boardville, BG 54321</p>
+          <p>Email: info@boardgamecafe.com</p>
         </div>
-    </div>
-    <div class="copyright">
+      </div>
+      <div class="copyright">
         © 2025 Board Game Cafe Official Site. All rights reserved.
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
-
