画像のファイルパス変更

--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -64,7 +64,7 @@
         <div class="game-grid">
           <div class="game-card">
             <div class="game-image">
-              <img src="images/catan.jpg" alt="カタンの開拓者たち" />
+              <img src="../../img/catan.jpg alt="カタンの開拓者たち" />
             </div>
             <div class="game-info">
               <h3 class="game-title">カタンの開拓者たち</h3>
@@ -82,7 +82,7 @@
 
           <div class="game-card">
             <div class="game-image">
-              <img src="images/carcassonne.jpg" alt="カルカソンヌ" />
+              <img src="../../img/carcassonne.jpg" alt="カルカソンヌ" />
             </div>
             <div class="game-info">
               <h3 class="game-title">カルカソンヌ</h3>
@@ -100,7 +100,7 @@
 
           <div class="game-card">
             <div class="game-image">
-              <img src="images/dominion.jpg" alt="ドミニオン" />
+              <img src="../../img/dominion.jpg" alt="ドミニオン" />
             </div>
             <div class="game-info">
               <h3 class="game-title">ドミニオン</h3>
@@ -119,7 +119,7 @@
           <div class="game-card">
             <div class="game-image">
               <img
-                src="images/ticket-to-ride.jpg"
+                src="../../img/ticket-to-ride.jpg"
                 alt="チケット・トゥ・ライド"
               />
             </div>
@@ -139,7 +139,7 @@
 
           <div class="game-card">
             <div class="game-image">
-              <img src="images/pandemic.jpg" alt="パンデミック" />
+              <img src="../../img/pandemic.jpg" alt="パンデミック" />
             </div>
             <div class="game-info">
               <h3 class="game-title">パンデミック</h3>
@@ -157,7 +157,7 @@
 
           <div class="game-card">
             <div class="game-image">
-              <img src="images/agricola.jpg" alt="アグリコラ" />
+              <img src="../../img/agricola.jpg" alt="アグリコラ" />
             </div>
             <div class="game-info">
               <h3 class="game-title">アグリコラ</h3>
