--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ボードゲームカタログ</title>
-    <link rel="stylesheet" href="/css/pages/game/style.css" />
+    <link rel="stylesheet" href="../../css/pages/game/style.css" />
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
         <div class="game-grid">
           <div class="game-card">
             <div class="game-image">
-              <img src="../../img/catan.jpg alt="カタンの開拓者たち" />
+              <img src="../../img/catan.jpg" alt="カタンの開拓者たち" />
             </div>
             <div class="game-info">
               <h3 class="game-title">カタンの開拓者たち</h3>
