--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/pages/rentals/style (2).css" />
+    <link rel="stylesheet" href="../../css/pages/rentals/style (2).css" />
   </head>
   <body>
     <header>
@@ -18,10 +18,10 @@
       </div>
       <nav>
         <a href="/">ホーム</a>
-        <a href="/pages/game/index.html">メニュー＆ゲーム</a>
-        <a href="/pages/reviews/index.html">レビュー</a>
+        <a href="../../pages/game/index.html">メニュー＆ゲーム</a>
+        <a href="../../pages/reviews/index.html">レビュー</a>
       </nav>
-      <a class="reserve-btn" href="/pages/rentals/index.html">予約する</a>
+      <a class="reserve-btn" href="../../pages/rentals/index.html">予約する</a>
     </header>
 
     <main class="container">
