デザイン統一した

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -24,6 +24,7 @@
       <nav>
         <a href="../game/index.html">メニュー＆ゲーム</a>
         <a href="../reviews/index.html">レビュー</a>
+        <a href="../access/index.html">交通アクセス</a>
       </nav>
       <a class="reserve-btn" href="../rentals/index.html">予約する</a>
     </header>
@@ -132,8 +133,8 @@
         <div>
           <strong>Resources</strong>
           <a href="../reviews/index.html">レビュー</a>
-          <a href="#">プライバシーポリシー</a>
-          <a href="#">利用規約</a>
+          <a href="../access/index.html">交通アクセス</a>
+          <a href="../regulations/index.html">利用規約</a>
         </div>
         <div>
           <strong>Contact Us</strong>
