--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" href="../../css/pages/rentals/style (2).css" />
   </head>
   <body>
-    <header>
+   <header>
       <div class="logo">
-        <img src="/img/title_logo.webp" alt="" class="logo-icon" />
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
         負けても泣かない大人の社交場
       </div>
       <nav>
-        <a href="/">ホーム</a>
-        <a href="../../pages/game/index.html">メニュー＆ゲーム</a>
-        <a href="../../pages/reviews/index.html">レビュー</a>
+        <a href="../game/index.html">メニュー＆ゲーム</a>
+        <a href="../reviews/index.html">レビュー</a>
+        <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../../pages/rentals/index.html">予約する</a>
+      <a class="reserve-btn" href="../rentals/index.html">予約する</a>
     </header>
 
     <main class="container">
@@ -132,15 +132,15 @@
         </div>
         <div>
           <strong>Explore</strong>
-          <a href="#">ホーム</a>
-          <a href="#">メニュー＆ゲーム</a>
-          <a href="#">予約</a>
+          <a href="/">ホーム</a>
+          <a href="../game/index.html">メニュー＆ゲーム</a>
+          <a href="../rentals/index.html">予約</a>
         </div>
         <div>
           <strong>Resources</strong>
-          <a href="#">アクセス＆お問い合わせ</a>
-          <a href="#">プライバシーポリシー</a>
-          <a href="#">利用規約</a>
+          <a href="../reviews/index.html">レビュー</a>
+          <a href="../access/index.html">交通アクセス</a>
+          <a href="../regulations/index.html">利用規約</a>
         </div>
         <div>
           <strong>Contact Us</strong>
@@ -152,5 +152,6 @@
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
     </footer>
+    
   </body>
 </html>
