--- a/pages/reviews/index.html
+++ b/pages/reviews/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>レビューを書く</title>
-    <link rel="stylesheet" href="../css/pages/reviews/style.css" />
+    <link rel="stylesheet" href="../../css/pages/reviews/style.css" />
     <script>
       function setRating(r) {
         document.getElementById("rating").value = r;
@@ -15,6 +15,19 @@
     </script>
   </head>
   <body>
+    <header>
+      <div class="logo">
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+        負けても泣かない大人の社交場
+      </div>
+      <nav>
+        <a href="../game/index.html">メニュー＆ゲーム</a>
+        <a href="../reviews/index.html">レビュー</a>
+        <a href="../access/index.html">交通アクセス</a>
+      </nav>
+      <a class="reserve-btn" href="../rentals/index.html">予約する</a>
+    </header>
+
     <div class="container">
       <div class="title-box">
         <h2>レビューを書く</h2>
@@ -54,5 +67,34 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="columns">
+        <div>
+          <p><strong>Discover a world of strategy and fun.</strong></p>
+        </div>
+        <div>
+          <strong>Explore</strong>
+          <a href="/">ホーム</a>
+          <a href="../game/index.html">メニュー＆ゲーム</a>
+          <a href="../rentals/index.html">予約</a>
+        </div>
+        <div>
+          <strong>Resources</strong>
+          <a href="../reviews/index.html">レビュー</a>
+          <a href="../access/index.html">交通アクセス</a>
+          <a href="../regulations/index.html">利用規約</a>
+        </div>
+        <div>
+          <strong>Contact Us</strong>
+          <p>123 Game Lane, Boardville, BG 54321</p>
+          <p>Email: info@boardgamecafe.com</p>
+        </div>
+      </div>
+      <div class="copyright">
+        © 2025 Board Game Cafe Official Site. All rights reserved.
+      </div>
+    </footer>
+    
   </body>
 </html>
