--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+        負けても泣かない大人の社交場
+      </div>
       <nav>
-        <div class="logo"></div>
-        <a href="/">Home</a>
-        <a href="/pages/game/index.html">Menu & Games</a>
-        <a href="/pages/reviews/index.html">Reviews</a>
-        <a href="/pages/rentals/index.html" class="reserve-btn"
-          >📅 テーブルを予約</a
-        >
+        <a href="../game/index.html">メニュー＆ゲーム</a>
+        <a href="../reviews/index.html">レビュー</a>
+        <a href="../access/index.html">交通アクセス</a>
       </nav>
+      <a class="reserve-btn" href="../rentals/index.html">予約する</a>
     </header>
 
     <div class="container">
@@ -177,38 +178,29 @@
     </div>
 
     <footer>
-      <div class="footer-content">
-        <div class="footer-section">
-          <h4>Explore</h4>
-          <p><a href="#home">Home</a></p>
-          <p><a href="#menu">Menu & Games</a></p>
-          <p><a href="#reservations">Reservations</a></p>
+      <div class="columns">
+        <div>
+          <p><strong>Discover a world of strategy and fun.</strong></p>
         </div>
-        <div class="footer-section">
-          <h4>Resources</h4>
-          <p><a href="#access">Access & Contact</a></p>
-          <p><a href="#privacy">Privacy Policy</a></p>
-          <p><a href="#terms">Terms of Service</a></p>
+        <div>
+          <strong>Explore</strong>
+          <a href="/">ホーム</a>
+          <a href="../game/index.html">メニュー＆ゲーム</a>
+          <a href="../rentals/index.html">予約</a>
         </div>
-        <div class="footer-section">
-          <h4>Support</h4>
-          <p><a href="#faq">FAQ</a></p>
-          <p><a href="#help">Help Center</a></p>
+        <div>
+          <strong>Resources</strong>
+          <a href="../reviews/index.html">レビュー</a>
+          <a href="../access/index.html">交通アクセス</a>
+          <a href="../regulations/index.html">利用規約</a>
         </div>
-        <div class="footer-section">
-          <h4>Contact Us</h4>
+        <div>
+          <strong>Contact Us</strong>
           <p>123 Game Lane, Boardville, BG 54321</p>
-          <p>Email: info@boardgamecafeofficialsite.com</p>
-          <p>Phone: (123) 456-7890</p>
-          <div class="social-links">
-            <a href="#facebook">f</a>
-            <a href="#twitter">t</a>
-            <a href="#instagram">i</a>
-            <a href="#youtube">y</a>
-          </div>
+          <p>Email: info@boardgamecafe.com</p>
         </div>
       </div>
-      <div class="footer-bottom">
+      <div class="copyright">
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
     </footer>
