--- a/pages/regulations/index.html
+++ b/pages/regulations/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8" />
   <title>利用規約｜Board Game Cafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../../css/pages/regulations/style.css" />
 </head>
 <body>
 
-<header class="header">
-  <div class="header-inner">
-    <nav class="nav">
-      <a href="#">ホーム</a>
-      <a href="#">メニュー＆ゲーム</a>
-      <a href="#">レビュー</a>
+<header>
+    <div class="logo">
+      <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+      負けても泣かない大人の社交場
+    </div>
+    <nav>
+      <a href="../game/index.html">メニュー＆ゲーム</a>
+      <a href="../reviews/index.html">レビュー</a>
+      <a href="../access/index.html">交通アクセス</a>
     </nav>
-    <a href="#" class="btn-reserve">予約する</a>
-  </div>
-</header>
+    <a class="reserve-btn" href="../rentals/index.html">予約する</a>
+  </header>
 
 <main class="container">
   <h1 class="page-title">利用規約</h1>
@@ -67,30 +69,33 @@
   </section>
 </main>
 
-<footer class="footer">
-  <div class="footer-inner">
-    <div class="footer-column">
-      <h3>Explore</h3>
-      <a href="#">ホーム</a>
-      <a href="#">メニュー＆ゲーム</a>
-      <a href="#">予約</a>
-    </div>
-    <div class="footer-column">
-      <h3>Resources</h3>
-      <a href="#">アクセス＆お問い合わせ</a>
-      <a href="#">プライバシーポリシー</a>
-      <a href="#">利用規約</a>
-    </div>
-    <div class="footer-column">
-      <h3>Support</h3>
-      <a href="#">FAQ</a>
-      <a href="#">Help Center</a>
-    </div>
-  </div>
-  <p class="copyright">
-    © 2025 Board Game Cafe. All rights reserved.
-  </p>
-</footer>
+<footer>
+      <div class="columns">
+        <div>
+          <p><strong>Discover a world of strategy and fun.</strong></p>
+        </div>
+        <div>
+          <strong>Explore</strong>
+          <a href="/">ホーム</a>
+          <a href="../game/index.html">メニュー＆ゲーム</a>
+          <a href="../rentals/index.html">予約</a>
+        </div>
+        <div>
+          <strong>Resources</strong>
+          <a href="../reviews/index.html">レビュー</a>
+          <a href="../access/index.html">交通アクセス</a>
+          <a href="../regulations/index.html">利用規約</a>
+        </div>
+        <div>
+          <strong>Contact Us</strong>
+          <p>123 Game Lane, Boardville, BG 54321</p>
+          <p>Email: info@boardgamecafe.com</p>
+        </div>
+      </div>
+      <div class="copyright">
+        © 2025 Board Game Cafe Official Site. All rights reserved.
+      </div>
+    </footer>
 
 </body>
 </html>
