--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -13,7 +13,9 @@
   <body>
    <header>
       <div class="logo">
+        <a href="../home/index.html">
         <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+        </a>
         負けても泣かない大人の社交場
       </div>
       <nav>
@@ -127,7 +129,7 @@
         </div>
         <div>
           <strong>Explore</strong>
-          <a href="/">ホーム</a>
+          <a href="../home/index.html">ホーム</a>
           <a href="../game/index.html">メニュー＆ゲーム</a>
           <a href="../rentals/index.html">予約</a>
         </div>
