fix: いらないUI消した

--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -24,16 +24,6 @@
 
     <div class="container">
       <aside class="sidebar">
-        <h3>カテゴリー</h3>
-        <div class="filter-section" id="category-filter">
-          <label><input type="checkbox" value="drink" /> ドリンク</label>
-          <label><input type="checkbox" value="food" /> フード</label>
-          <label
-            ><input type="checkbox" value="boardgame" checked />
-            ボードゲーム</label
-          >
-        </div>
-
         <div class="filter-section" id="player-count-filter">
           <h4>ボードゲーム絞り込み</h4>
           <div class="player-range">
@@ -46,7 +36,7 @@
         </div>
 
         <div class="filter-section" id="play-time-filter">
-          <h4>プレイ時間 <span>▼</span></h4>
+          <h4>プレイ時間</h4>
           <label><input type="checkbox" value="all" checked /> 全て</label>
           <label><input type="checkbox" value="lt30" /> 〜30</label>
           <label><input type="checkbox" value="30to60" /> 30-60</label>
@@ -54,7 +44,7 @@
         </div>
 
         <div class="filter-section" id="genre-filter">
-          <h4>ジャンル <span>▼</span></h4>
+          <h4>ジャンル</h4>
           <label><input type="checkbox" value="all" checked /> 全て</label>
           <label><input type="checkbox" value="戦略" /> 戦略</label>
           <label><input type="checkbox" value="タイル" /> タイル</label>
