--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -28,7 +28,7 @@
         <a href="../reviews/index.html">レビュー</a>
         <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../rentals/index.html">予約する</a>
+      <a class="reserve-btn" href="../login/index.html">ログイン</a>
     </header>
 
     <div class="hero">
