ログインと新規登録画面追加

--- a/pages/newlogin/index.html
+++ b/pages/newlogin/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ボードゲームカフェ ログイン</title>
-  <link rel="stylesheet" href="../../css/pages/login/style.css">
+  <link rel="stylesheet" href="../../css/pages/newlogin/style.css">
 </head>
 <body>
   <header>
@@ -19,11 +19,11 @@
         <a href="../access/index.html">交通アクセス</a>
       </nav>
       <a class="reserve-btn" href="../login/index.html">ログイン</a>
-    </header>
-    
+  </header>
+
   <div class="login-container">
     <h1>負けても泣かない大人の社交場</h1>
-    <p class="subtitle">ログイン</p>
+    <p class="subtitle">新規登録</p>
 
     <form class="login-form">
       <label for="email">メールアドレス</label>
@@ -32,11 +32,11 @@
       <label for="password">パスワード</label>
       <input type="password" id="password" placeholder="••••••••" required>
 
-      <button type="submit">ログイン</button>
+      <button type="submit">新規登録</button>
     </form>
 
     <p class="footer-text">
-      アカウントをお持ちでない方は <a href="../newlogin/index.html">新規登録</a>
+      アカウントをお持ちの方は <a href="../login/index.html">ログイン</a>
     </p>
   </div>
 
@@ -66,6 +66,6 @@
       <div class="copyright">
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
-    </footer>
+  </footer>
 </body>
 </html>
