ログインボタン変更

--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -23,7 +23,7 @@
         <a href="../reviews/index.html">レビュー</a>
         <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../rentals/index.html">ログイン</a>
+      <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
     </header>
 
     <main class="container">
