--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -18,9 +18,9 @@
         <a href="../reviews/index.html">レビュー</a>
         <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../login/index.html">ログイン</a>
+      <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
     </header>
-    
+
   <div class="login-container">
     <h1>負けても泣かない大人の社交場</h1>
     <p class="subtitle">ログイン</p>
