--- a/pages/newlogin/index.html
+++ b/pages/newlogin/index.html
@@ -18,7 +18,7 @@
         <a href="../reviews/index.html">レビュー</a>
         <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../login/index.html">ログイン</a>
+      <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
   </header>
 
   <div class="login-container">
