accessグーグルマップ追加

--- a/pages/access/index.html
+++ b/pages/access/index.html
@@ -28,16 +28,23 @@
   <p class="page-sub">
   </p>
 
+  <section class="contact-section">
+
+  
+
+  <!-- 下：左右 -->
   <div class="contact-wrapper">
-
-    <!-- 左側 -->
     <div class="contact-left">
-      <img src="../../img/access.jpg" alt="アクセス画像">
-
-      <div class="info-box">
+      <!-- 所在地・営業時間・アクセス -->
+       <div class="info-box">
         <h3>所在地</h3>
-        <p>〒151-0053 東京都渋谷区代々木2-1-1<br>新宿マインズタワーB1F</p>
-      </div>
+        <p>
+          〒100-0014<br>
+          東京都千代田区永田町1-7-1<br>
+          国会議事堂 内
+        </p>
+    </div>
+
 
       <div class="info-box">
         <h3>営業時間</h3>
@@ -51,17 +58,16 @@
       <div class="info-box">
         <h3>アクセス</h3>
         <ul>
-          <li>新宿駅南口から徒歩3分</li>
-          <li>JR新宿駅新南改札から徒歩1分</li>
+          <li>新潟駅南口から徒歩74時間</li>
+          <li>JR新宿駅新南改札から徒歩1時間</li>
           <li>地下駐車場完備（提携割引あり）</li>
         </ul>
       </div>
     </div>
 
-    <!-- 右側（フォーム） -->
     <div class="contact-right">
-
-      <h2>お問い合わせフォーム</h2>
+      <!-- お問い合わせフォーム -->
+       <h2>お問い合わせフォーム</h2>
 
       <form id="contactForm" onsubmit="handleSubmit(event)">
         <label>お名前</label>
@@ -117,9 +123,22 @@
 
 
     </div>
+    </div>
   </div>
 
+</section>
+
+
 </main>
+
+<!--Google Map-->
+  <div class="map-hero">
+    <iframe
+        src="https://www.google.com/maps?q=35.6758,139.7449&z=19&output=embed"
+        loading="lazy">
+    </iframe>
+
+  </div>
 <footer>
       <div class="columns">
         <div>
