--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -34,9 +34,6 @@
     <div class="hero">
       <h1>負けても泣かない大人の社交場</h1>
       <p>大人たちのための特別な遊び場。ゲームの興奮とくつろぎを。</p>
-      <button onclick="location.href='../login/index.html'">
-        ログイン
-      </button>
     </div>
 
     <section>
@@ -137,6 +134,7 @@
           <a href="../reviews/index.html">レビュー</a>
           <a href="../access/index.html">交通アクセス</a>
           <a href="../regulations/index.html">利用規約</a>
+          <a href="../login/index.html">管理者ログイン</a>
         </div>
         <div>
           <strong>Contact Us</strong>
