管理者画面リンク追加

--- a/pages/game/index.html
+++ b/pages/game/index.html
@@ -228,6 +228,7 @@
           <a href="../reviews/index.html">レビュー</a>
           <a href="../access/index.html">交通アクセス</a>
           <a href="../regulations/index.html">利用規約</a>
+          <a href="../login/index.html">管理者ログイン</a>
         </div>
         <div>
           <strong>Contact Us</strong>
