--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -22,7 +22,7 @@
     </header>
 
   <div class="login-container">
-    <h1>負けても泣かない大人の社交場</h1>
+    <h1>管理者画面<br>※一般の人は回れ右<br>してください</h1>
     <p class="subtitle">ログイン</p>
 
     <form class="login-form">
@@ -33,11 +33,10 @@
       <input type="password" id="password" placeholder="••••••••" required>
 
       <button type="submit">ログイン</button>
+
     </form>
 
-    <p class="footer-text">
-      アカウントをお持ちでない方は <a href="../newlogin/index.html">新規登録</a>
-    </p>
+    
   </div>
 
   <footer>
@@ -56,6 +55,7 @@
           <a href="../reviews/index.html">レビュー</a>
           <a href="../access/index.html">交通アクセス</a>
           <a href="../regulations/index.html">利用規約</a>
+          <a href="../login/index.html">管理者ログイン</a>
         </div>
         <div>
           <strong>Contact Us</strong>
