ログイン画面のログイン機能実装「仮」

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -67,5 +67,8 @@
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
     </footer>
+
+  <!-- ログイン処理スクリプト -->
+  <script src="../../js/login.js"></script>
 </body>
 </html>
