ゲーム追加項目追加

--- a/pages/Administrator/index.html
+++ b/pages/Administrator/index.html
@@ -52,6 +52,16 @@
     <textarea id="description" placeholder="説明文"></textarea>
     <input type="number" id="playerMin" placeholder="最小人数" required>
     <input type="number" id="playerMax" placeholder="最大人数" required>
+    <input type="number" id="playTime" placeholder="プレイ時間（分）">
+    <select id="genre" required>
+      <option value="">ジャンルを選択</option>
+      <option value="戦略">戦略</option>
+      <option value="タイル">タイル</option>
+      <option value="拡張子">拡張子</option>
+      <option value="陣営">陣営</option>
+      <option value="ワーカープレイス">ワーカープレイス</option>
+      <option value="対戦">対戦</option>
+    </select>
     <input type="number" id="stock" placeholder="在庫数" required>
     <input type="file" id="imageFile" accept="image/*">
 
