cloundeflameの仕様を回避するための処置

--- a/index.html
+++ b/index.html
@@ -2,138 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>負けても泣かない大人の社交場</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/pages/home/style.css" />
+    <meta http-equiv="refresh" content="0; url=/home/" />
+    <title>Redirecting...</title>
   </head>
-
   <body>
-   
-
-    <div class="hero">
-      <h1>負けても泣かない大人の社交場</h1>
-      <p>大人たちのための特別な遊び場。ゲームの興奮とくつろぎを。</p>
-      <button onclick="location.href='pages/rentals/index.html'">
-        今すぐ予約
-      </button>
-    </div>
-
-    <section>
-      <h2>ようこそ、大人のための社交場へ</h2>
-      <p>
-        大人だってゲームに没頭し、笑い、そして時に悔しがってもよいもの。<br />
-        当店は特別な時間を過ごせるボードゲームカフェです。<br />
-        初心者から上級者まで、幅広いラインナップと快適な空間をご用意しています。
-      </p>
-    </section>
-
-    <section>
-      <h2>選りすぐりのボードゲーム</h2>
-
-      <div class="games">
-        <div class="game-card">
-          <span class="tag">戦略</span>
-          <img src="img/home_bodoge_katan.jpg" alt="" />
-          <div class="info">
-            <strong>カタン</strong
-            ><br />島を開拓し、資源を交換し勝利を目指す戦略ゲーム。
-          </div>
-        </div>
-        <div class="game-card">
-          <span class="tag">ラッキ要素</span>
-          <img src="img/home_bodoge_dominion.jpg" alt="" />
-          <div class="info">
-            <strong>ドミニオン</strong
-            ><br />カードを集め、デッキ構築で戦う名作。
-          </div>
-        </div>
-        <div class="game-card">
-          <span class="tag">SF/冒険</span>
-          <img src="img/home_bodege_terahxo-ming.jpg" alt="" />
-          <div class="info">
-            <strong>テラフォーミング・マーズ</strong
-            ><br />火星を開拓する壮大な戦略ゲーム。
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="reserve-banner">
-      <h2>忘れられない夜を、今すぐ予約</h2>
-      <p>最高のボードゲーム体験を、美味しいお食事とともに。</p>
-      <button onclick="location.href='pages/rentals/index.html'">
-        席を予約する
-      </button>
-    </div>
-
-    <section>
-      <h2>営業時間</h2>
-      <table>
-        <tr>
-          <td>月曜日</td>
-          <td>17:00 - 23:00</td>
-        </tr>
-        <tr>
-          <td>火曜日</td>
-          <td>定休日</td>
-        </tr>
-        <tr>
-          <td>水曜日</td>
-          <td>17:00 - 23:00</td>
-        </tr>
-        <tr>
-          <td>木曜日</td>
-          <td>17:00 - 23:00</td>
-        </tr>
-        <tr>
-          <td>金曜日</td>
-          <td>17:00 - 24:00</td>
-        </tr>
-        <tr>
-          <td>土曜日</td>
-          <td>12:00 - 24:00</td>
-        </tr>
-        <tr>
-          <td>日曜日</td>
-          <td>12:00 - 22:00</td>
-        </tr>
-      </table>
-    </section>
-
-    <footer>
-      <div class="columns">
-        <div>
-          <p><strong>Discover a world of strategy and fun.</strong></p>
-        </div>
-        <div>
-          <strong>Explore</strong>
-          <a href="/">ホーム</a>
-          <a href="pages/game/index.html">メニュー＆ゲーム</a>
-          <a href="pages/rentals/index.html">予約</a>
-        </div>
-        <div>
-          <strong>Resources</strong>
-          <a href="pages/reviews/index.html">レビュー</a>
-          <a href="#">プライバシーポリシー</a>
-          <a href="#">利用規約</a>
-        </div>
-        <div>
-          <strong>Contact Us</strong>
-          <p>123 Game Lane, Boardville, BG 54321</p>
-          <p>Email: info@boardgamecafe.com</p>
-        </div>
-      </div>
-      <div class="copyright">
-        © 2025 Board Game Cafe Official Site. All rights reserved.
-      </div>
-    </footer>
+    <p>Redirecting...</p>
   </body>
 </html>
